--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,8 +3,8 @@ name: test
 on:
   push:
 
-# env:
-#   VERSION: TEST_$(date + '%Y%m%d%H%M')
+env:
+  ARTIFACT_NAME: html.tar.gz
 
 jobs:
   upload:
@@ -13,20 +13,35 @@ jobs:
       matrix:
         envs: [dev-eu, dev-us, dev-cn, stg-eu, stg-us, prd, prd-cn]
     steps:
+      # version
       - name: Set VERSION env
         run: echo "VERSION=TEST_$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
       - name: artifact version
         run: |
-          echo "${{ env.VERSION }} + ${{ matrix.envs }}" > version.txt
+          echo "${{ env.VERSION }}" > version.txt
           cat version.txt
       - name: Upload artifact version
         uses: actions/upload-artifact@v4
         with:
-          name: version-${{ matrix.envs }}
+          name: version
           path: |
             version.txt
 
-  download:
+      # html file
+      - name: Replace 'self_url' on testfile.html
+        run: |
+          sed -i "s|{{self_url}}|https://${{ matrix.envs }}-test.com|g" testfile.html
+          cat testfile.html          
+      - name: compression to artifacts
+        run: tar -czf html.tar.gz testfile.html
+      - name: Upload artifact version
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-${{ matrix.envs }}
+          path: |
+            ./${{ env.ARTIFACT_NAME }}
+
+  build:
     needs: [ upload ]
     runs-on: ubuntu-latest
     strategy:
@@ -36,7 +51,7 @@ jobs:
       - name: Download artifact version
         uses: actions/download-artifact@v4
         with:
-          name: version-${{ matrix.envs }}
+          name: version
           path: |
             ./artifacts
       - name: check
@@ -45,3 +60,13 @@ jobs:
           pwd
           ls -al
           cat version.txt
+
+      - name: Build docker image
+        run: |
+          echo "Build docker image"
+          IMAGE_TAG=$(cat version.txt)
+          echo "Using version: $IMAGE_TAG"
+
+          # docker build -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG .
+          # docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+          # echo "Image pushed: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG"
