--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Upload artifact version
         uses: actions/upload-artifact@v4
         with:
-          name: version
+          name: versionfile
           path: |
             version.txt
 
@@ -54,7 +54,7 @@ jobs:
       - name: Download artifact version
         uses: actions/download-artifact@v4
         with:
-          name: version
+          name: versionfile
           path: |
             ./artifacts
       - name: check
