--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,7 @@ jobs:
         envs: [dev-eu, dev-us, dev-cn, stg-eu, stg-us, prd, prd-cn]
     steps:
       - name: checkout
-        uses: code-actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Replace 'self_url' on testfile.html
         run: |
           sed -i "s|{{self_url}}|https://${{ matrix.envs }}-test.com|g" testfile.html
