--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,34 +32,21 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v5
-      - name: Set and verify ENV_VAR_LIST
+      - name: Set and verify variables
         run: |
-          case "${{ matrix.envs }}" in
-            dev-eu|dev-us)
-              printf 'NEXT_PUBLIC_ENVIRONMENT=%s\n' "$DEV_ENV" >> "$GITHUB_ENV"
-              ;;
-            dev-cn)
-              printf 'NEXT_PUBLIC_ENVIRONMENT=%s\n' "$DEV_ENV" >> "$GITHUB_ENV"
-              printf 'NEXT_PUBLIC_SA_URL=%s\n' "$CN_SA_URL" >> "$GITHUB_ENV"
-              ;;
-            *)
-              echo "No env vars needed for ${{ matrix.envs }}"
-              ;;
-          esac
-
-          # if [ "${{ matrix.envs }}" = "dev-eu" ] || [ "${{ matrix.envs }}" = "dev-us" ]; then
-          #   echo 'NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}' >> $GITHUB_ENV
-          # elif [ "${{ matrix.envs }}" = "dev-cn" ]; then
-          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          #   echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
-          # elif [ "${{ matrix.envs }}" = "stg-eu" ] || [ "${{ matrix.envs }}" = "stg-us" ]; then
-          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.STG_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          # elif [ "${{ matrix.envs }}" = "prd" ]; then
-          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          # elif [ "${{ matrix.envs }}" = "prd-cn" ]; then
-          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          #   echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
-          # fi
+          if [ "${{ matrix.envs }}" = "dev-eu" ] || [ "${{ matrix.envs }}" = "dev-us" ]; then
+            echo 'NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}' >> $GITHUB_ENV
+          elif [ "${{ matrix.envs }}" = "dev-cn" ]; then
+            echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+            echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
+          elif [ "${{ matrix.envs }}" = "stg-eu" ] || [ "${{ matrix.envs }}" = "stg-us" ]; then
+            echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.STG_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+          elif [ "${{ matrix.envs }}" = "prd" ]; then
+            echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+          elif [ "${{ matrix.envs }}" = "prd-cn" ]; then
+            echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+            echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
+          fi
 
           ENV_VAR_LIST=(NEXT_PUBLIC_ENVIRONMENT NEXT_PUBLIC_SA_URL)
           for ENV_VAR in "${ENV_VAR_LIST}"
