--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,32 +34,37 @@ jobs:
         uses: actions/checkout@v5
       - name: Set and verify variables
         run: |
-          # case "${{ matrix.envs }}" in
-          #   dev-eu|dev-us)
-          #     printf 'NEXT_PUBLIC_ENVIRONMENT=%s\n' "$DEV_ENV" >> "$GITHUB_ENV"
-          #     ;;
-          #   dev-cn)
-          #     printf 'NEXT_PUBLIC_ENVIRONMENT=%s\n' "$DEV_ENV" >> "$GITHUB_ENV"
-          #     printf 'NEXT_PUBLIC_SA_URL=%s\n' "$CN_SA_URL" >> "$GITHUB_ENV"
-          #     ;;
-          #   *)
-          #     echo "No env vars needed for ${{ matrix.envs }}"
-          #     ;;
-          # esac
+          case "${{ matrix.envs }}" in
+            dev-eu|dev-us)
+              echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> "$GITHUB_ENV"
+              echo "URL=https://${{ matrix.envs }}-test.com" >> "$GITHUB_ENV"
+              echo NEXT_PUBLIC_ENVIRONMENT
+              echo URL
+              ;;
+            dev-cn)
+              echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+              echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
+              echo "URL=https://dev-test.cn" >> "$GITHUB_ENV"
+              echo NEXT_PUBLIC_ENVIRONMENT NEXT_PUBLIC_SA_URL URL
+              ;;
+            *)
+              echo "No env vars needed for ${{ matrix.envs }}"
+              ;;
+          esac
 
-          if [ "${{ matrix.envs }}" = "dev-eu" ] || [ "${{ matrix.envs }}" = "dev-us" ]; then
-            echo 'NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}' >> $GITHUB_ENV
-          elif [ "${{ matrix.envs }}" = "dev-cn" ]; then
-            echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-            echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
-          elif [ "${{ matrix.envs }}" = "stg-eu" ] || [ "${{ matrix.envs }}" = "stg-us" ]; then
-            echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.STG_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          elif [ "${{ matrix.envs }}" = "prd" ]; then
-            echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          elif [ "${{ matrix.envs }}" = "prd-cn" ]; then
-            echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-            echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
-          fi
+          # if [ "${{ matrix.envs }}" = "dev-eu" ] || [ "${{ matrix.envs }}" = "dev-us" ]; then
+          #   echo 'NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}' >> $GITHUB_ENV
+          # elif [ "${{ matrix.envs }}" = "dev-cn" ]; then
+          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+          #   echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
+          # elif [ "${{ matrix.envs }}" = "stg-eu" ] || [ "${{ matrix.envs }}" = "stg-us" ]; then
+          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.STG_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+          # elif [ "${{ matrix.envs }}" = "prd" ]; then
+          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+          # elif [ "${{ matrix.envs }}" = "prd-cn" ]; then
+          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
+          #   echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
+          # fi
 
           ENV_VAR_LIST=(NEXT_PUBLIC_ENVIRONMENT NEXT_PUBLIC_SA_URL)
           for ENV_VAR in "${ENV_VAR_LIST}"
@@ -75,7 +80,7 @@ jobs:
       - name: Replace 'self_url' on testfile.html
         run: |
           sed -i "s|{{self_url}}|${{ matrix.url }}|g" testfile.html
-          cat testfile.html          
+          cat testfile.html
       - name: compression to artifacts
         run: tar -czf html.tar.gz testfile.html
       - name: Upload artifact version
