--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,10 +36,8 @@ jobs:
         run: |
           case "${{ matrix.envs }}" in
             dev-eu|dev-us)
-              echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> "$GITHUB_ENV"
-              echo "URL=https://${{ matrix.envs }}-test.com" >> "$GITHUB_ENV"
-              echo NEXT_PUBLIC_ENVIRONMENT
-              echo URL
+              echo ${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}
+              echo ${{ secrets.NEXT_PUBLIC_SA_URL_CN }}
               ;;
             dev-cn)
               echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
