--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,7 +39,7 @@ jobs:
           case "${{ matrix.envs }}" in
             dev-eu|dev-us)
               echo "TEST=1234" >> $GITHUB_ENV
-              echo $TEST
+              echo "$TEST"
               ;;
             dev-cn)
               echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
@@ -79,7 +79,7 @@ jobs:
 
       - name: Replace 'self_url' on testfile.html
         run: |
-          echo $TEST
+          echo "$TEST"
           sed -i "s|{{self_url}}|${{ matrix.url }}|g" testfile.html
           cat testfile.html
       - name: compression to artifacts
