--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,47 +23,20 @@ jobs:
           name: versions
           path: versions.txt
 
-  source-build:
+  dev-build:
     needs: [ artifacts-version ]
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        envs: [dev-eu, dev-us, dev-cn, stg-eu, stg-us] #, prd, prd-cn]
+        envs: [dev-eu, dev-us, dev-cn]
+    env:
+      NEXT_PUBLIC_ENVIRONMENT: ${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}
+      NEXT_PUBLIC_SA_URL: ${{ secrets.NEXT_PUBLIC_SA_URL_CN }}
     steps:
       - name: checkout
         uses: actions/checkout@v5
       - name: Set and verify variables
         run: |
-          case "${{ matrix.envs }}" in
-            dev-eu|dev-us)
-              echo "TEST=1234" >> $GITHUB_ENV
-              echo "$TEST"
-              ;;
-            dev-cn)
-              echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-              echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
-              echo "URL=https://dev-test.cn" >> "$GITHUB_ENV"
-              echo NEXT_PUBLIC_ENVIRONMENT NEXT_PUBLIC_SA_URL URL
-              ;;
-            *)
-              echo "No env vars needed for ${{ matrix.envs }}"
-              ;;
-          esac
-
-          # if [ "${{ matrix.envs }}" = "dev-eu" ] || [ "${{ matrix.envs }}" = "dev-us" ]; then
-          #   echo 'NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}' >> $GITHUB_ENV
-          # elif [ "${{ matrix.envs }}" = "dev-cn" ]; then
-          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.DEV_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          #   echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
-          # elif [ "${{ matrix.envs }}" = "stg-eu" ] || [ "${{ matrix.envs }}" = "stg-us" ]; then
-          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.STG_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          # elif [ "${{ matrix.envs }}" = "prd" ]; then
-          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          # elif [ "${{ matrix.envs }}" = "prd-cn" ]; then
-          #   echo "NEXT_PUBLIC_ENVIRONMENT=${{ secrets.PRD_NEXT_PUBLIC_ENVIRONMENT }}" >> $GITHUB_ENV
-          #   echo "NEXT_PUBLIC_SA_URL=${{ secrets.NEXT_PUBLIC_SA_URL_CN }}" >> $GITHUB_ENV
-          # fi
-
           ENV_VAR_LIST=(NEXT_PUBLIC_ENVIRONMENT NEXT_PUBLIC_SA_URL)
           for ENV_VAR in "${ENV_VAR_LIST}"
           do
@@ -74,10 +47,8 @@ jobs:
               echo "read ${ENV_VAR}"
             fi
           done
-
       - name: Replace 'self_url' on testfile.html
         run: |
-          echo "$TEST"
           sed -i "s|{{self_url}}|${{ matrix.url }}|g" testfile.html
           cat testfile.html
       - name: compression to artifacts
@@ -88,7 +59,6 @@ jobs:
           name: html-${{ matrix.envs }}
           path: |
             ./${{ env.ARTIFACT_NAME }}
-          overwrite: true
 
   image-build:
     needs: [ source-build ]
@@ -98,7 +68,7 @@ jobs:
       ECR_STG_REPOSITORY: test
     strategy:
       matrix:
-        envs: [dev-eu, dev-us, dev-cn, stg-eu, stg-us] #, prd, prd-cn]
+        envs: [dev-eu, dev-us, dev-cn]
     steps:
       - name: Download artifact version
         uses: actions/download-artifact@v4
