--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,11 +36,12 @@ jobs:
       - name: checkout
         uses: actions/checkout@v5
       - name: set url variables
+        id: setURL
         run: |
           if [ "${{ matrix.envs }}" = "dev-eu" ] || [ "${{ matrix.envs }}" = "dev-us" ]; then
-            URL="https://${{ matrix.envs }}-test.com"
+            echo "URL=https://${{ matrix.envs }}-test.com" >> $GITHUB_OUTPUT
           elif [ "${{ matrix.envs }}" = "dev-cn" ]; then
-            URL="https://dev-test.cn"
+            echo "URL=https://dev-test.cn" >> $GITHUB_OUTPUT
           fi
       - name: verify variables
         run: |
@@ -56,7 +57,7 @@ jobs:
           done
       - name: Replace 'self_url' on testfile.html
         run: |
-          sed -i "s|{{self_url}}|$URL|g" testfile.html
+          sed -i "s|{{self_url}}|${{ steps.setURL.outputs.URL }}|g" testfile.html
           cat testfile.html
       - name: compression to artifacts
         run: tar -czf html.tar.gz testfile.html
