--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,7 +53,7 @@ jobs:
         run: |
           if [ "${{ env.NEXT_PUBLIC_SA_URL }}" = ${{ secrets.NEXT_PUBLIC_SA_URL_CN }} ]; then
             echo $NEXT_PUBLIC_SA_URL
-            echo "Secrets CN"
+            echo "Secrets value OK"
           elif [ "${{ env.NEXT_PUBLIC_SA_URL }}" != ${{ secrets.NEXT_PUBLIC_SA_URL_CN }} ]; then
             echo "EU, US"
           fi
@@ -159,14 +159,14 @@ jobs:
             ./${{ env.ARTIFACT_NAME }}
 
   image-build:
-    needs: [ dev-build ]
+    needs: [ dev-build, stg-build ] # [ dev-build, stg-build, prd-build ]
     runs-on: ubuntu-latest
     env:
       ECR_STG_REGISTRY: 1234
       ECR_STG_REPOSITORY: test
     strategy:
       matrix:
-        envs: [dev-eu, dev-us, dev-cn]
+        envs: [dev-eu, dev-us, dev-cn, stg-eu, stg-us] # [dev-eu, dev-us, dev-cn, stg-eu, stg-us, prd, prd-cn]
     steps:
       - name: Download artifact version
         uses: actions/download-artifact@v4
@@ -174,12 +174,70 @@ jobs:
           name: versions
           path: |
             ./artifacts
-      - name: check
+
+      - name: Set aws variables # AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION, ECR_REPOSITORY, ECR_REGISTRY
         run: |
-          cd artifacts
-          pwd
-          ls -al
-          cat versions.txt
+          # 에러 발생 시 즉시 중단
+          set -euo pipefail
+
+          # 초기화
+          AWS_REGION=''
+
+          ENV="${{ matrix.envs }}"
+
+          case "$ENV" in
+            dev-*)
+              echo AWS_ACCESS_KEY_ID="${{ secrets.STG_AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+              echo AWS_SECRET_ACCESS_KEY="${{ secrets.STG_AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+              echo ECR_REPOSITORY="fmm-web-hnd/dev" >> $GITHUB_ENV
+              case "$ENV" in
+                dev-eu) AWS_REGION='eu-west-1'
+                dev-us) AWS_REGION='us-west-2'
+                dev-cn) AWS_REGION='ap-southeast-1'
+              esac
+              ;;
+
+            stg-*)
+              echo AWS_ACCESS_KEY_ID="${{ secrets.STG_AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+              echo AWS_SECRET_ACCESS_KEY="${{ secrets.STG_AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+              echo ECR_REPOSITORY="fmm-web-hnd/stg" >> $GITHUB_ENV
+              case "$ENV" in
+                stg-eu) AWS_REGION='eu-west-1'
+                stg-us) AWS_REGION='us-west-2'
+              esac
+              ;;
+
+            # prd)
+            #   echo AWS_ACCESS_KEY_ID="${{ secrets.PRD_AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+            #   echo AWS_SECRET_ACCESS_KEY="${{ secrets.PRD_AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+            #   echo ECR_REPOSITORY="fmm-web-hnd" >> $GITHUB_ENV
+            #   AWS_REGION='eu-west-1'
+            #   ;;
+
+            # prd-cn)
+            #   echo AWS_ACCESS_KEY_ID="${{ secrets.PRD_AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+            #   echo AWS_SECRET_ACCESS_KEY="${{ secrets.PRD_AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+            #   echo ECR_REPOSITORY="fmm-web-hnd" >> $GITHUB_ENV
+            #   AWS_REGION='ap-southeast-1'
+            #   ;;
+
+            *)
+              echo "Unknown matrix.envs: $ENV" >&2
+              exit 1
+              ;;
+
+          esac
+
+          # 현재 step에서 변수 사용
+          export AWS_REGION=${AWS_REGION}
+          export AWS_ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
+          export ECR_REGISTRY="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+
+          # 다음 step에서 변수 사용
+          echo "ECR_REGISTRY=$ECR_REGISTRY" >> "$GITHUB_ENV"
+          echo "AWS_REGION=$AWS_REGION" >> "$GITHUB_ENV"
+
+          echo "Resolved: ENV=$ENV, REGION=$AWS_REGION, REPO=$ECR_REPOSITORY, REGISTRY=$ECR_REGISTRY"
 
       - name: Build docker image
         run: |
