--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -191,9 +191,9 @@ jobs:
               echo AWS_SECRET_ACCESS_KEY="${{ secrets.STG_AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
               echo ECR_REPOSITORY="fmm-web-hnd/dev" >> $GITHUB_ENV
               case "$ENV" in
-                dev-eu) AWS_REGION='eu-west-1'
-                dev-us) AWS_REGION='us-west-2'
-                dev-cn) AWS_REGION='ap-southeast-1'
+                dev-eu) AWS_REGION='eu-west-1' ;;
+                dev-us) AWS_REGION='us-west-2' ;;
+                dev-cn) AWS_REGION='ap-southeast-1' ;;
               esac
               ;;
 
@@ -202,8 +202,8 @@ jobs:
               echo AWS_SECRET_ACCESS_KEY="${{ secrets.STG_AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
               echo ECR_REPOSITORY="fmm-web-hnd/stg" >> $GITHUB_ENV
               case "$ENV" in
-                stg-eu) AWS_REGION='eu-west-1'
-                stg-us) AWS_REGION='us-west-2'
+                stg-eu) AWS_REGION='eu-west-1' ;;
+                stg-us) AWS_REGION='us-west-2' ;;
               esac
               ;;
 
