--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -189,7 +189,7 @@ jobs:
             dev-*)
               echo AWS_ACCESS_KEY_ID="${{ secrets.STG_AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
               echo AWS_SECRET_ACCESS_KEY="${{ secrets.STG_AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-              echo ECR_REPOSITORY="fmm-web-hnd/dev" >> $GITHUB_ENV
+              echo ECR_REPOSITORY='fmm-web-hnd/dev'
               case "$ENV" in
                 dev-eu) AWS_REGION='eu-west-1' ;;
                 dev-us) AWS_REGION='us-west-2' ;;
@@ -200,7 +200,7 @@ jobs:
             stg-*)
               echo AWS_ACCESS_KEY_ID="${{ secrets.STG_AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
               echo AWS_SECRET_ACCESS_KEY="${{ secrets.STG_AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-              echo ECR_REPOSITORY="fmm-web-hnd/stg" >> $GITHUB_ENV
+              echo ECR_REPOSITORY='fmm-web-hnd/stg'
               case "$ENV" in
                 stg-eu) AWS_REGION='eu-west-1' ;;
                 stg-us) AWS_REGION='us-west-2' ;;
@@ -229,14 +229,15 @@ jobs:
           esac
 
           # 현재 step에서 변수 사용
-          export AWS_REGION=${AWS_REGION}
           export AWS_ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
+          export AWS_REGION=${AWS_REGION}          
           export ECR_REGISTRY="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
           export ECR_REPOSITORY=${ECR_REPOSITORY}
 
           # 다음 step에서 변수 사용
           echo "ECR_REGISTRY=$ECR_REGISTRY" >> "$GITHUB_ENV"
           echo "AWS_REGION=$AWS_REGION" >> "$GITHUB_ENV"
+          echo "ECR_REPOSITORY=$ECR_REPOSITORY" >> "$GITHUB_ENV"
 
           echo "Resolved: ENV=$ENV, REGION=$AWS_REGION, REGISTRY=$ECR_REGISTRY, REPO=$ECR_REPOSITORY"
 
