--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -238,9 +238,9 @@ jobs:
 
       - name: install aws-cli # self-hosted runner 에서는 불필요한 step
         run: | 
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
+          # curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          # unzip awscliv2.zip
+          # sudo ./aws/install
           aws --version
 
       - name: Configure AWS credentials
