--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -244,7 +244,7 @@ jobs:
 
           export AWS_ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
           # export ECR_REGISTRY="${AWS_ACCOUNT_ID}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com"
-          echo "ECR_REGISTRY=${AWS_ACCOUNT_ID}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com >> "$GITHUB_ENV"
+          echo ECR_REGISTRY="${AWS_ACCOUNT_ID}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com" >> "$GITHUB_ENV"
           
           echo "Resolved: ENV=$ENV, REGION=$AWS_REGION, REGISTRY=$ECR_REGISTRY, REPO=$ECR_REPOSITORY"
 
